fixed elements overlapping nav bar

--- a/style.css
+++ b/style.css
@@ -357,6 +357,7 @@ nav {
     left: 0;
     right: 0;
     padding: 1em;
+    z-index: 1;
 }
 
 nav a {
